src/test/deca/context/invalid/type.deca
// Description:
//    return in void method
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023

class A {
	protected int x;
	void setX(int b){
		c = 3;
	}
}
